fixed scrollbar (now hidden)

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -69,6 +69,14 @@ body {
   background-color: #fff;
 }
 
+html {
+  overflow:   scroll;
+}
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
 [tabindex="-1"]:focus {
   outline: 0 !important;
 }
@@ -6647,8 +6655,8 @@ a.close.disabled {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  overflow-y: auto;
   outline: 0;
+  overflow-y: auto;
 }
 
 .modal-dialog {
@@ -6688,11 +6696,13 @@ a.close.disabled {
   display: -ms-flexbox;
   display: flex;
   max-height: calc(100% - 1rem);
+  display:none;
 }
 
 .modal-dialog-scrollable .modal-content {
   max-height: calc(100vh - 1rem);
   overflow: hidden;
+  display:none;
 }
 
 .modal-dialog-scrollable .modal-header,
@@ -6702,7 +6712,8 @@ a.close.disabled {
 }
 
 .modal-dialog-scrollable .modal-body {
-  overflow-y: auto;
+  overflow: auto;
+  display:none;
 }
 
 .modal-dialog-centered {
@@ -6808,6 +6819,7 @@ a.close.disabled {
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   padding: 1rem;
+  overflow:auto;
 }
 
 .modal-footer {
